--- a/samples/fifo2/fifo2.mak.in
+++ b/samples/fifo2/fifo2.mak.in
@@ -2,30 +2,30 @@
 !IF "$(CFG)" == ""
 CFG=fifo2 - Win32 Debug Tkenv
 !MESSAGE No configuration specified. Defaulting to fifo2 - Win32 Debug Tkenv.
-!ENDIF 
+!ENDIF
 
 !IF "$(CFG)" != "fifo2 - Win32 Debug Tkenv" && "$(CFG)" != "fifo2 - Win32 Debug Cmdenv" && "$(CFG)" != "fifo2 - Win32 Release Tkenv" && "$(CFG)" != "fifo2 - Win32 Release Cmdenv"
 !MESSAGE Invalid configuration "$(CFG)" specified.
 !MESSAGE You can specify a configuration when running NMAKE
 !MESSAGE by defining the macro CFG on the command line. For example:
-!MESSAGE 
+!MESSAGE
 !MESSAGE NMAKE /f "fifo2.mak" CFG="fifo2 - Win32 Debug Tkenv"
-!MESSAGE 
+!MESSAGE
 !MESSAGE Possible choices for configuration are:
-!MESSAGE 
+!MESSAGE
 !MESSAGE "fifo2 - Win32 Debug Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "fifo2 - Win32 Debug Cmdenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "fifo2 - Win32 Release Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "fifo2 - Win32 Release Cmdenv" (based on "Win32 (x86) Console Application")
-!MESSAGE 
+!MESSAGE
 !ERROR An invalid configuration is specified.
-!ENDIF 
+!ENDIF
 
 !IF "$(OS)" == "Windows_NT"
 NULL=
-!ELSE 
+!ELSE
 NULL=nul
-!ENDIF 
+!ENDIF
 
 !IF  "$(CFG)" == "fifo2 - Win32 Debug Tkenv"
 
@@ -59,45 +59,45 @@ CLEAN :
     if not exist "$(INTDIR)/$(NULL)" mkdir "$(INTDIR)"
 
 CPP=cl.exe
-CPP_PROJ=/nologo /MLd /W3 /Gm /ZI /Od /I "..\..\src\sim" /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /GZ /c 
+CPP_PROJ=/nologo /MLd /W3 /Gm /ZI /Od /I "..\..\include" /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /GZ /c
 
 .c{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .c{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 RSC=rc.exe
 BSC32=bscmake.exe
-BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc" 
+BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc"
 BSC32_SBRS= \
-	
+
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fifo2.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /pdbtype:sept /libpath:"..\..\lib" /libpath:"@TK_LIB_PATH@" 
+LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fifo2.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /pdbtype:sept /libpath:"..\..\lib" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
 	"$(INTDIR)\fifo2.obj" \
 	"$(INTDIR)\fifo2_n.obj" \
@@ -144,45 +144,45 @@ CLEAN :
     if not exist "$(INTDIR)/$(NULL)" mkdir "$(INTDIR)"
 
 CPP=cl.exe
-CPP_PROJ=/nologo /MLd /W3 /Gm /ZI /Od /I "..\..\src\sim" /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /GZ /c 
+CPP_PROJ=/nologo /MLd /W3 /Gm /ZI /Od /I "..\..\include" /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /GZ /c
 
 .c{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .c{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 RSC=rc.exe
 BSC32=bscmake.exe
-BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc" 
+BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc"
 BSC32_SBRS= \
-	
+
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fifo2.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /pdbtype:sept /libpath:"..\..\lib" 
+LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:yes /pdb:"$(OUTDIR)\fifo2.pdb" /debug /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /pdbtype:sept /libpath:"..\..\lib"
 LINK32_OBJS= \
 	"$(INTDIR)\fifo2.obj" \
 	"$(INTDIR)\fifo2_n.obj" \
@@ -226,45 +226,45 @@ CLEAN :
     if not exist "$(INTDIR)/$(NULL)" mkdir "$(INTDIR)"
 
 CPP=cl.exe
-CPP_PROJ=/nologo /ML /W3 /O2 /I "..\..\src\sim" /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /c 
+CPP_PROJ=/nologo /ML /W3 /O2 /I "..\..\include" /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /c
 
 .c{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .c{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 RSC=rc.exe
 BSC32=bscmake.exe
-BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc" 
+BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc"
 BSC32_SBRS= \
-	
+
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fifo2.pdb" /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /libpath:"..\..\lib" /libpath:"@TK_LIB_PATH@" 
+LINK32_FLAGS=sim_std.lib envir.lib tkenv.lib @TCL_LIB@ @TK_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fifo2.pdb" /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /libpath:"..\..\lib" /libpath:"@TK_LIB_PATH@"
 LINK32_OBJS= \
 	"$(INTDIR)\fifo2.obj" \
 	"$(INTDIR)\fifo2_n.obj" \
@@ -308,45 +308,45 @@ CLEAN :
     if not exist "$(INTDIR)/$(NULL)" mkdir "$(INTDIR)"
 
 CPP=cl.exe
-CPP_PROJ=/nologo /ML /W3 /O2 /I "..\..\src\sim" /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /c 
+CPP_PROJ=/nologo /ML /W3 /O2 /I "..\..\include" /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "_MBCS" /Fp"$(INTDIR)\fifo2.pch" /YX /Fo"$(INTDIR)\\" /Fd"$(INTDIR)\\" /FD /c
 
 .c{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.obj::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .c{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cpp{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 .cxx{$(INTDIR)}.sbr::
    $(CPP) @<<
-   $(CPP_PROJ) $< 
+   $(CPP_PROJ) $<
 <<
 
 RSC=rc.exe
 BSC32=bscmake.exe
-BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc" 
+BSC32_FLAGS=/nologo /o"$(OUTDIR)\fifo2.bsc"
 BSC32_SBRS= \
-	
+
 LINK32=link.exe
-LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fifo2.pdb" /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /libpath:"..\..\lib" 
+LINK32_FLAGS=sim_std.lib envir.lib cmdenv.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /incremental:no /pdb:"$(OUTDIR)\fifo2.pdb" /machine:I386 /out:"$(OUTDIR)\fifo2.exe" /libpath:"..\..\lib"
 LINK32_OBJS= \
 	"$(INTDIR)\fifo2.obj" \
 	"$(INTDIR)\fifo2_n.obj" \
@@ -361,16 +361,16 @@ LINK32_OBJS= \
   $(LINK32_FLAGS) $(LINK32_OBJS)
 <<
 
-!ENDIF 
+!ENDIF
 
 
 !IF "$(NO_EXTERNAL_DEPS)" != "1"
 !IF EXISTS("fifo2.dep")
 !INCLUDE "fifo2.dep"
-!ELSE 
+!ELSE
 !MESSAGE Warning: cannot find "fifo2.dep"
-!ENDIF 
-!ENDIF 
+!ENDIF
+!ENDIF
 
 
 !IF "$(CFG)" == "fifo2 - Win32 Debug Tkenv" || "$(CFG)" == "fifo2 - Win32 Debug Cmdenv" || "$(CFG)" == "fifo2 - Win32 Release Tkenv" || "$(CFG)" == "fifo2 - Win32 Release Cmdenv"
@@ -387,11 +387,11 @@ InputPath=.\fifo2.ned
 InputName=fifo2
 
 ".\fifo2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Debug Cmdenv"
 
@@ -399,11 +399,11 @@ InputPath=.\fifo2.ned
 InputName=fifo2
 
 ".\fifo2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Tkenv"
 
@@ -411,11 +411,11 @@ InputPath=.\fifo2.ned
 InputName=fifo2
 
 ".\fifo2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Cmdenv"
 
@@ -423,13 +423,13 @@ InputPath=.\fifo2.ned
 InputName=fifo2
 
 ".\fifo2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
 
-!ENDIF 
+
+!ENDIF
 
 SOURCE=.\fifo2_n.cpp
 
@@ -444,11 +444,11 @@ InputPath=.\fifonet2.ned
 InputName=fifonet2
 
 ".\fifonet2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Debug Cmdenv"
 
@@ -456,11 +456,11 @@ InputPath=.\fifonet2.ned
 InputName=fifonet2
 
 ".\fifonet2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Tkenv"
 
@@ -468,11 +468,11 @@ InputPath=.\fifonet2.ned
 InputName=fifonet2
 
 ".\fifonet2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Cmdenv"
 
@@ -480,13 +480,13 @@ InputPath=.\fifonet2.ned
 InputName=fifonet2
 
 ".\fifonet2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
 
-!ENDIF 
+
+!ENDIF
 
 SOURCE=.\fifonet2_n.cpp
 
@@ -506,11 +506,11 @@ InputPath=.\gen2.ned
 InputName=gen2
 
 ".\gen2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Debug Cmdenv"
 
@@ -518,11 +518,11 @@ InputPath=.\gen2.ned
 InputName=gen2
 
 ".\gen2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Tkenv"
 
@@ -530,11 +530,11 @@ InputPath=.\gen2.ned
 InputName=gen2
 
 ".\gen2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Cmdenv"
 
@@ -542,13 +542,13 @@ InputPath=.\gen2.ned
 InputName=gen2
 
 ".\gen2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
 
-!ENDIF 
+
+!ENDIF
 
 SOURCE=.\gen2_n.cpp
 
@@ -568,11 +568,11 @@ InputPath=.\sink2.ned
 InputName=sink2
 
 ".\sink2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Debug Cmdenv"
 
@@ -580,11 +580,11 @@ InputPath=.\sink2.ned
 InputName=sink2
 
 ".\sink2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Tkenv"
 
@@ -592,11 +592,11 @@ InputPath=.\sink2.ned
 InputName=sink2
 
 ".\sink2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
+
 
 !ELSEIF  "$(CFG)" == "fifo2 - Win32 Release Cmdenv"
 
@@ -604,13 +604,13 @@ InputPath=.\sink2.ned
 InputName=sink2
 
 ".\sink2_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	<<tempfile.bat 
-	@echo off 
+	<<tempfile.bat
+	@echo off
 	..\..\bin\nedc.exe -s _n.cpp $(InputName).ned
-<< 
-	
+<<
 
-!ENDIF 
+
+!ENDIF
 
 SOURCE=.\sink2_n.cpp
 
@@ -618,5 +618,5 @@ SOURCE=.\sink2_n.cpp
 
 
 
-!ENDIF 
+!ENDIF
 
